<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gokulk.indiacoffeehouse.MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/indiancoffee"
        android:scaleType="centerCrop"
        android:id="@+id/coffee_image_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/title_name"
        android:textSize="36sp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/title_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/shop_description"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/shop_description_text_view"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_title"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textStyle="bold"
            android:id="@+id/phone_title_text_view"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:autoLink="phone"
            android:textSize="16sp"
            android:textColorLink="@color/colorBlue"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_toEndOf="@id/phone_title_text_view"
            android:layout_toRightOf="@id/phone_title_text_view"
            android:id="@+id/phone_text_view"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/address_title"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold"
        android:id="@+id/address_title_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/address_line_one"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:id="@+id/address_street_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/address_line_two"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:id="@+id/address_city_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/hours_title"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:id="@+id/hours_title_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/hours_line_one"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:id="@+id/hours_weekday_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/hours_line_two"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:id="@+id/hours_weekend_text_view"
        />
</LinearLayout>

